--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+-webkit-appearance: button;
 }
 
 button:not(:disabled),
@@ -1710,12 +1710,12 @@ pre code {
 }
 
 .table-hover .table-danger:hover {
-  background-color: #f1b0b7;
+  background-color: #17a2b8;
 }
 
 .table-hover .table-danger:hover > td,
 .table-hover .table-danger:hover > th {
-  background-color: #f1b0b7;
+  background-color: #17a2b8;
 }
 
 .table-light,
@@ -4904,13 +4904,13 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-danger {
-  color: #721c24;
+  color: #17a2b8;
   background-color: #f8d7da;
   border-color: #f5c6cb;
 }
 
 .alert-danger hr {
-  border-top-color: #f1b0b7;
+  border-top-color: #17a2b8;
 }
 
 .alert-danger .alert-link {
@@ -5235,19 +5235,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-danger {
-  color: #721c24;
+  color: #17a2b8;
   background-color: #f5c6cb;
 }
 
 .list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
-  color: #721c24;
-  background-color: #f1b0b7;
+  color: #17a2b8;
+  background-color: #17a2b8;
 }
 
 .list-group-item-danger.list-group-item-action.active {
   color: #fff;
-  background-color: #721c24;
-  border-color: #721c24;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .list-group-item-light {
