--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -2187,7 +2187,7 @@ footer
 footer {
   margin-top: 60px;
   padding: 60px 0px 30px 0px;
-  background-color: #303232;
+  background-color: #070b0b;
 }
 
 footer .logo {
@@ -2201,12 +2201,14 @@ footer ul li {
 
 footer ul li a {
   font-size: 14px;
-  color: #fff;
+  color: #17a2b8;
   transition: all .3s;
 }
 
 footer ul li a:hover {
-  color: #aaa;
+  color: #17a2b8;
+ 
+ 
 }
 
 footer h4 {
@@ -2244,7 +2246,7 @@ footer .under-footer p {
 }
 
 footer .under-footer a {
-  color: #cff;
+  color: #17a2b8;
 }
 
 footer .under-footer a:hover {
@@ -2579,11 +2581,14 @@ Single Product Page
  .quantity.buttons_added .plus:hover {
   background: #eeeeee; }
  
- .quantity input::-webkit-outer-spin-button,
- .quantity input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  margin: 0; }
+  .quantity input::-webkit-outer-spin-button,
+  .quantity input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+  }
+  
   
   .quantity.buttons_added .minus:focus,
  .quantity.buttons_added .plus:focus {
