--- a/style-login.css
+++ b/style-login.css
@@ -104,7 +104,7 @@ header{
 .background {
     width: 100%;
     height: 100vh;
-    background: url('back3.png') no-repeat;
+    background: url('logo1.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     filter: blur(10px);
@@ -117,7 +117,7 @@ left: 50%;
 transform: translate(-50%, -50%);
 width: 75%;
 height: 450px;
-background: url('back3.png') no-repeat;
+background: url('logo1.jpg') no-repeat;
 background-size: cover;
 background-position: center;  
 border-radius: 10px;
